Updated HTML file

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       </div>
       <!-- Card 3 -->
       <div class="dept-card">
-        <img src="etc.jpg" alt="Electronics & Telecommunications">
-        <h3>B. Tech. Electronics & Telecommunications</h3>
+        <img src="etc.jpg" alt=" & Telecommunications">
+        <h3>B. Tech. & Telecommunications</h3>
         <p><strong>DTE Code:</strong> 430437250F</p>
         <p><strong>Intake:</strong> 60 + 6 (DSE)</p>
         <a href="#" class="dept-btn">Visit Department</a>
