Updated HTML, CSS, and JS files

--- a/index.html
+++ b/index.html
@@ -154,6 +154,17 @@
       <div class=
     </footer>
 
+     <!-- 🔹 Chatbot Widget -->
+<div id="chatbot">
+  <div class="chat-header">👩‍🎓 T&P Helper</div>
+  <div class="chat-body" id="chatBody">
+    <div class="bot-msg">Hello! I am your scholar guide. Ask me about training & placement! 😊</div>
+  </div>
+  <div class="chat-footer">
+    <input type="text" id="chatInput" placeholder="Type a question..." />
+    <button onclick="sendChat()">Send</button>
+  </div>
+</div>
 
   <script src="main.js"></script>
 </body>
