--- a/index.html
+++ b/index.html
@@ -64,19 +64,34 @@
   <!-- 🔹 Hero Section -->
   
     <div class="about">
-      <h1>About Cummins College</h1>
-      <p>Maharshi Karve Stree Shikshan Samstha’s Cummins College of Engineering for Women, Nagpur is the leading engineering institutes in central India. 
+  <h1>About Cummins College</h1>
+  <div class="about-container">
+    
+    <!-- Left side text -->
+    <div class="about-text">
+      <p>
+        Maharshi Karve Stree Shikshan Samstha’s Cummins College of Engineering for Women, Nagpur is the leading engineering institute in central India. 
         The institute aims at delivering quality education through innovative practices and quality placements through Industry Interaction and support. 
         It is spread over 22 acres in the lush green environment near the bank of river Vena at Hingna in Nagpur district.
-         It is affiliated to RTM Nagpur University, Approved by AICTE and NAAC accredited with A+ Grade. The institute was established in the year 2010 with the generous financial grant from Cummins India Limited. 
-         It has made remarkable progress in the past decade and still going strong with the new achievements in Academics and Placements. 
-         It offers engineering education in Computer Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering. 
-         It has a well-developed infrastructure which includes classroom equipped with ICT tools, advanced laboratories, a central library with huge collection of books and journals, indoor and outdoor playgrounds, green initiatives and many more. 
-         The institute also offers in-campus hostel facility with mess and gym for the outstations candidates.
-          It has well qualified and experience staff, dedicated Training & Placement cells and other important cells and clubs for better university results, industry interactions and placements.
-           The institute is keenly interested in bringing the all-round development of its students and hence provides all the necessary and advanced facilities to its students. 
-           The clean, serene and pollution free environment here makes learning enjoyable and also has positive effects on students’ physical and mental health..</p>
+        It is affiliated to RTM Nagpur University, Approved by AICTE and NAAC accredited with A+ Grade. The institute was established in the year 2010 with the generous financial grant from Cummins India Limited. 
+        It has made remarkable progress in the past decade and still going strong with the new achievements in Academics and Placements. 
+        It offers engineering education in Computer Engineering, Electronics & Telecommunication Engineering and Mechanical Engineering. 
+        It has a well-developed infrastructure which includes classrooms equipped with ICT tools, advanced laboratories, a central library with huge collection of books and journals, indoor and outdoor playgrounds, green initiatives and many more. 
+        The institute also offers in-campus hostel facility with mess and gym for the outstations candidates.
+        It has well qualified and experienced staff, dedicated Training & Placement cells and other important cells and clubs for better university results, industry interactions and placements.
+        The institute is keenly interested in bringing the all-round development of its students and hence provides all the necessary and advanced facilities to its students. 
+        The clean, serene and pollution free environment here makes learning enjoyable and also has positive effects on students’ physical and mental health.
+      </p>
     </div>
+
+    <!-- Right side image -->
+    <div class="about-img">
+      <img src="comp.jpeg" alt="Computer Engineering">
+    </div>
+    
+  </div>
+</div>
+
   
    <!-- Departments Section -->
   <section class="departments">
