Updated HTML, CSS, and JS for About Us page

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       </div>
       <!-- Card 3 -->
       <div class="dept-card">
-        <img src="etc.jpg" alt="Electronics & Telecommunications">
-        <h3>B. Tech. Electronics & Telecommunications</h3>
+        <img src="etc.jpg" alt=" & Telecommunications">
+        <h3>B. Tech. & Telecommunications</h3>
         <p><strong>DTE Code:</strong> 430437250F</p>
         <p><strong>Intake:</strong> 60 + 6 (DSE)</p>
         <a href="#" class="dept-btn">Visit Department</a>
@@ -169,6 +169,17 @@
       <div class=
     </footer>
 
+     <!-- 🔹 Chatbot Widget -->
+<div id="chatbot">
+  <div class="chat-header">👩‍🎓 T&P Helper</div>
+  <div class="chat-body" id="chatBody">
+    <div class="bot-msg">Hello! I am your scholar guide. Ask me about training & placement! 😊</div>
+  </div>
+  <div class="chat-footer">
+    <input type="text" id="chatInput" placeholder="Type a question..." />
+    <button onclick="sendChat()">Send</button>
+  </div>
+</div>
 
   <script src="main.js"></script>
 </body>
