Updated homepage and chatbot functionality

--- a/training.html
+++ b/training.html
@@ -20,6 +20,18 @@
     </div>
   </header>
 
+  <!-- 🔹 Sidebar -->
+  <div id="sidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">&times;</a>
+    <a href="index.html">Home</a>
+    <a href="companies.html">Facilites</a>
+    <a href="training.html">Academics</a>
+    <a href="training.html">Placement & training</a>
+    <a href="training.html">Alumini</a>
+    
+  </div>
+  <span class="openbtn" onclick="openSidebar()">☰ Menu</span>
+
   <!-- 🔹 Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
@@ -199,6 +211,28 @@
       <h3>Social Connect</h3>
       <div class=
     </footer>
+
+<!-- Chatbot -->
+  <div class="chatbot-container">
+    <button class="chatbot-toggle" onclick="toggleChatbot()">
+      <span id="chatbot-icon">👩‍🎓</span>
+    </button>
+    <div class="chatbot-window" id="chatbot-window">
+      <div class="chatbot-header">
+        <span>👩‍🎓 Campus Assistant</span>
+      </div>
+      <div class="chatbot-messages" id="chatbot-messages">
+        <div class="message bot-message">
+          Hello! I'm your campus assistant. How can I help you today? You can ask me about admissions, facilities, courses, or anything else about Cummins College! 😊
+        </div>
+      </div>
+      <div class="chatbot-input">
+        <input type="text" id="chatbot-input" placeholder="Type your message..." onkeypress="handleKeyPress(event)">
+        <button class="chatbot-send" onclick="sendMessage()">Send</button>
+      </div>
+    </div>
+  </div>    
+
   <script src="training.js"></script>
 </body>
 </html>
