--- a/companies.html
+++ b/companies.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recruiting Companies | Cummins College</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/companies.css">
+  <title>Our Recruiters</title>
+  <link rel="stylesheet" href="companies.css">
 </head>
 <body>
 
@@ -20,9 +19,20 @@
       </div>
     </div>
   </header>
+   
+  <!-- 🔹 Sidebar -->
+  <div id="sidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">&times;</a>
+    <a href="index.html">Home</a>
+    <a href="companies.html">Facilites</a>
+    <a href="training.html">Academics</a>
+    <a href="training.html">Placement & training</a>
+    <a href="training.html">Alumini</a>
+    
+  </div>
+  <span class="openbtn" onclick="openSidebar()">☰ Menu</span>
 
-
-  <!-- 🔹 Navbar -->
+   <!-- 🔹 Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
@@ -32,68 +42,155 @@
         <li><a href="placement-flow.html">Placement Process</a></li>
     </ul>
   </nav>
+  
+  <header>
+    <h1>Our Recruiters</h1>
+  </header>
 
+  <!-- Recruiters Section -->
+   <marquee >
+  <section class="recruiters">
+    <h2>Top Recruiters</h2>
+    <div class="company-list">
+      <div class="company-card" onclick="showCompanyInfo('tcs')">
+        <img src="tcs.png" alt="TCS Logo">
+        <p>TCS</p>
+      </div>
+      <div class="company-card" onclick="showCompanyInfo('infosys')">
+        <img src="infosys.png" alt="Infosys Logo">
+        <p>Infosys</p>
+      </div>
+      <div class="company-card" onclick="showCompanyInfo('amazon')">
+        <img src="amazon.png" alt="Amazon Logo">
+        <p>Amazon</p>
+      </div>
+    </div>
+  </section>
+  </marquee>
 
-  <!-- 🔹 Sidebar -->
-  <div id="sidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">&times;</a>
-    <a href="statistics.html">Placement Stats</a>
-    <a href="companies.html" class="active">Companies</a>
-    <a href="training.html">Placement & Training</a>
+  <!-- Info Modal -->
+  <div id="company-info" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <h3 id="company-name"></h3>
+      <p id="company-details"></p>
+    </div>
   </div>
-  <span class="openbtn" onclick="openSidebar()">☰ Menu</span>
 
-  <!-- 🔹 Page Header -->
-  <section class="page-header">
-    <h1>Our Recruiting Companies</h1>
-    <p>Top recruiters who visited Cummins College Nagpur</p>
+  <!-- Placements Section -->
+  <section class="placements">
+    <h2>Student Placements</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Student Name</th>
+          <th>Department</th>
+          <th>Company</th>
+          <th>CTC (LPA)</th>
+          <th>Review</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Aditi Sharma</td>
+          <td>Computer Engineering</td>
+          <td>TCS</td>
+          <td>6.5</td>
+          <td><a href="#" onclick="showReview('Aditi Sharma','Great training and work culture at TCS!')">Review</a></td>
+        </tr>
+        <tr>
+          <td>Rahul Mehta</td>
+          <td>Mechanical</td>
+          <td>Infosys</td>
+          <td>5.2</td>
+          <td><a href="#" onclick="showReview('Rahul Mehta','Infosys gave me a great platform to start my career.')">Review</a></td>
+        </tr>
+        <tr>
+          <td>Priya Deshmukh</td>
+          <td>Electronics</td>
+          <td>Amazon</td>
+          <td>20.0</td>
+          <td><a href="#" onclick="showReview('Priya Deshmukh','Amazon is challenging but provides great growth!')">Review</a></td>
+        </tr>
+      </tbody>
+    </table>
   </section>
 
-  <!-- 🔹 Companies Grid -->
-  <section class="companies-grid">
-    <div class="company-card">
-      <img src="assets/images/google.png" alt="Google">
-      <h3>Google</h3>
-      <p>Leading global tech company offering roles in software development and cloud technologies.</p>
+  <!-- Review Modal -->
+  <div id="review-modal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeReview()">&times;</span>
+      <h3 id="review-student"></h3>
+      <p id="review-text"></p>
+    </div>
+  </div>
+
+   <!-- Footer Section -->
+<footer class="footer">
+  <div class="footer-container">
+
+    <!-- Important Links -->
+    <div class="footer-col">
+      <h3>Important Links</h3>
+      <ul>
+        <li><a href="#">Newsletters</a></li>
+        <li><a href="#">AICTE EoA & LoI</a></li>
+        <li><a href="#">RTMNU Affiliation</a></li>
+        <li><a href="#">NIRF Reports</a></li>
+        <li><a href="#">Mandatory Disclosures</a></li>
+        <li><a href="#">Careers</a></li>
+      </ul>
     </div>
 
-    <div class="company-card">
-      <img src="assets/images/microsoft.png" alt="Microsoft">
-      <h3>Microsoft</h3>
-      <p>One of the biggest recruiters in AI, cloud computing, and software engineering.</p>
+    <!-- Contact -->
+    <div class="footer-col">
+      <h3>Contact Us</h3>
+      <p>📞 +91 9420410225</p>
+      <p>📞 +91 8055935567</p>
+      <p>📞 +91 7768929237</p>
+      <p>📞 +91 8422008886</p>
+      <p>✉️ office@cumminscollege.edu.in</p>
     </div>
 
-    <div class="company-card">
-      <img src="assets/images/infosys.png" alt="Infosys">
-      <h3>Infosys</h3>
-      <p>IT services and consulting giant with opportunities in development and testing.</p>
+    <!-- City Office -->
+    <div class="footer-col">
+      <h3>City Office</h3>
+      <p>Maharshi Karve Stree Shikshan Samstha's</p>
+      <p>Nargundkar Shaikshanik Prakalp, Khamla Road, Deonagar</p>
+      <p>Nagpur - 440015</p>
     </div>
 
-    <div class="company-card">
-      <img src="assets/images/tcs.png" alt="TCS">
-      <h3>TCS</h3>
-      <p>Tata Consultancy Services, a consistent recruiter across multiple engineering branches.</p>
+    <!-- Address & Social -->
+    <div class="footer-col">
+      <h3>Institute Address</h3>
+      <p>Mouje Sukli (Gupchup), Hingna, Nagpur - 441110</p>
+
+      <h3>Social Connect</h3>
+      <div class=
+    </footer>
+
+<!-- Chatbot -->
+  <div class="chatbot-container">
+    <button class="chatbot-toggle" onclick="toggleChatbot()">
+      <span id="chatbot-icon">👩‍🎓</span>
+    </button>
+    <div class="chatbot-window" id="chatbot-window">
+      <div class="chatbot-header">
+        <span>👩‍🎓 Campus Assistant</span>
+      </div>
+      <div class="chatbot-messages" id="chatbot-messages">
+        <div class="message bot-message">
+          Hello! I'm your campus assistant. How can I help you today? You can ask me about admissions, facilities, courses, or anything else about Cummins College! 😊
+        </div>
+      </div>
+      <div class="chatbot-input">
+        <input type="text" id="chatbot-input" placeholder="Type your message..." onkeypress="handleKeyPress(event)">
+        <button class="chatbot-send" onclick="sendMessage()">Send</button>
+      </div>
     </div>
+  </div>    
 
-    <div class="company-card">
-      <img src="assets/images/wipro.png" alt="Wipro">
-      <h3>Wipro</h3>
-      <p>IT consulting and services company recruiting across domains.</p>
-    </div>
 
-    <div class="company-card">
-      <img src="assets/images/accenture.png" alt="Accenture">
-      <h3>Accenture</h3>
-      <p>Global professional services company providing IT and management solutions.</p>
-    </div>
-  </section>
-
-  <!-- 🔹 Footer -->
-  <footer>
-    <p>Training & Placement Office | Cummins College of Engineering for Women, Nagpur</p>
-    <p>Email: tnp@cumminsnagpur.ac.in | Phone: +91-1234567890</p>
-  </footer>
-
-  <script src="js/main.js"></script>
+  <script src="companies.js"></script>
 </body>
 </html>
