Updated homepage design and added images

--- a/index.html
+++ b/index.html
@@ -183,21 +183,21 @@
       
       <!-- Card 1 -->
       <div class="choose-card">
-        <img src="images/affordability.jpg" alt="Affordability">
+        <img src="afford.jpg" alt="Affordability">
         <h3>Affordability</h3>
         <p>Our financial aid program makes CCOEW affordable for every family throughout the world.</p>
       </div>
 
       <!-- Card 2 -->
       <div class="choose-card">
-        <img src="images/academics.jpg" alt="Academics">
+        <img src="academic.jpg" alt="Academics">
         <h3>Academics</h3>
         <p>An education at CCOEW has limitless possibilities. Our courses are taught by esteemed faculty members.</p>
       </div>
 
       <!-- Card 3 -->
       <div class="choose-card">
-        <img src="images/student-life.jpg" alt="Student Life">
+        <img src="inspiringlife.jpg" alt="Student Life">
         <h3>Inspiring Student Life</h3>
         <p>Our residential system facilitates learning opportunities with peers and professors from diverse backgrounds.</p>
       </div>
