--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     </div>
   </header>
 
+  <!-- 🔹 Login Icon -->
+<div class="login-container">
+  <a href="login.html" class="login-link">
+    <span class="login-icon">👤</span> 
+    <span class="login-text">Login</span>
+  </a>
+</div>
+
+
   <!-- 🔹 Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
