Fixed header style and made it sticky

--- a/training.html
+++ b/training.html
@@ -20,6 +20,14 @@
     </div>
   </header>
 
+  <!-- 🔹 Login Icon -->
+<div class="login-container">
+  <a href="login.html" class="login-link">
+    <span class="login-icon">👤</span> 
+    <span class="login-text">Login</span>
+  </a>
+</div>
+
   <!-- 🔹 Sidebar -->
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">&times;</a>
