--- a/companies.html
+++ b/companies.html
@@ -34,10 +34,10 @@
   <!-- 🔹 Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="training.html">Home</a></li>
       <li><a href="statistics.html">Placement Statistics</a></li>
       <li><a href="companies.html">Our Recruiters</a></li>
-      <li><a href="placed-students.html">Placed Students</a></li>
+      
       <li><a href="placement-flow.html">Placement Process</a></li>
     </ul>
   </nav>
