--- a/companies.html
+++ b/companies.html
@@ -11,7 +11,7 @@
   <!-- 🔹 header-->
   <header class="college-header">
     <div class="header-container">
-      <img src="logo1.webp" alt="Cummins Logo" class="college-logo">
+      <img src="cummins-removebg-preview.png" alt="Cummins Logo" class="college-logo">
       <div class="college-text">
         <p class="top-small">Maharshi Karve Stree Shikshan Sanstha’s</p>
         <h1 class="college-name">CUMMINS COLLEGE OF ENGINEERING FOR WOMEN, NAGPUR</h1>
@@ -62,63 +62,64 @@
       <table class="recruiters-table">
         <thead>
           <tr>
+            <th>Sr no</th>
             <th>Company Name</th>
             <th>Package</th>
             <th>Students Placed</th>
           </tr>
         </thead>
         <tbody>
-          <tr><td>Palo Alto Networks</td><td>54.75 LPA</td><td>3</td></tr>
-          <tr><td>Intuit India Product Development Center Pvt. Ltd.</td><td>39.25 LPA</td><td>2</td></tr>
-          <tr><td>Paypal</td><td>34.40 LPA</td><td>4</td></tr>
-          <tr><td>PhonePe Pvt Ltd</td><td>33.14 LPA</td><td>5</td></tr>
-          <tr><td>Providence Global Center</td><td>27 LPA</td><td>3</td></tr>
-          <tr><td>Cisco</td><td>24.73 LPA</td><td>6</td></tr>
-          <tr><td>Tesco</td><td>20.77 LPA</td><td>4</td></tr>
-          <tr><td>Deutsche India Private Limited</td><td>19.63 LPA</td><td>3</td></tr>
-          <tr><td>BrowserStack</td><td>19.91 LPA</td><td>2</td></tr>
-          <tr><td>Nike India Technology</td><td>15.16 LPA</td><td>3</td></tr>
-          <tr><td>GSK</td><td>15 LPA</td><td>2</td></tr>
-          <tr><td>Gartner</td><td>12.19 LPA</td><td>3</td></tr>
-          <tr><td>Blueflame Labs</td><td>12–15 LPA</td><td>4</td></tr>
-          <tr><td>Citi</td><td>12 LPA</td><td>3</td></tr>
-          <tr><td>McKinsey & Co.</td><td>12 LPA</td><td>2</td></tr>
-          <tr><td>Amadeus</td><td>11.77 LPA</td><td>3</td></tr>
-          <tr><td>PepsiCo GBS</td><td>10.77 LPA</td><td>4</td></tr>
-          <tr><td>Caterpillar</td><td>10.7 LPA</td><td>5</td></tr>
-          <tr><td>Publicis Sapient</td><td>10.47 LPA</td><td>3</td></tr>
-          <tr><td>Applied Materials</td><td>9.67 LPA</td><td>4</td></tr>
-          <tr><td>HSBC</td><td>9 LPA</td><td>6</td></tr>
-          <tr><td>Dover India Pvt. Ltd.</td><td>9 LPA</td><td>2</td></tr>
-          <tr><td>Cummins India Limited</td><td>8.15 LPA</td><td>7</td></tr>
-          <tr><td>Principal Global</td><td>8 LPA</td><td>3</td></tr>
-          <tr><td>ConsultAdd</td><td>7–12 LPA</td><td>4</td></tr>
-          <tr><td>Eaton</td><td>7.9 LPA</td><td>3</td></tr>
-          <tr><td>TATA Communication</td><td>7.7 LPA</td><td>5</td></tr>
-          <tr><td>MG Motor</td><td>7 LPA</td><td>2</td></tr>
-          <tr><td>Wirtgen Group – A John Deere Company</td><td>7 LPA</td><td>3</td></tr>
-          <tr><td>TechnipFMC</td><td>6.34 LPA</td><td>2</td></tr>
-          <tr><td>Technip Energies</td><td>6.2 LPA</td><td>3</td></tr>
-          <tr><td>Vertiv</td><td>6 LPA</td><td>2</td></tr>
-          <tr><td>Accolite Digital</td><td>6 LPA</td><td>4</td></tr>
-          <tr><td>Kennametal India Limited</td><td>5.75 LPA</td><td>2</td></tr>
-          <tr><td>Kohler</td><td>5.50 LPA</td><td>3</td></tr>
-          <tr><td>Tech Mahindra</td><td>5.5 LPA</td><td>7</td></tr>
-          <tr><td>Infocepts</td><td>5 LPA</td><td>6</td></tr>
-          <tr><td>Siemens</td><td>5 LPA</td><td>5</td></tr>
-          <tr><td>KonvergeAI</td><td>4.6 LPA</td><td>3</td></tr>
-          <tr><td>KPIT</td><td>4.5 LPA</td><td>8</td></tr>
-          <tr><td>ifm Engineering Pvt. Ltd.</td><td>4.5 LPA</td><td>2</td></tr>
-          <tr><td>HCL Technologies</td><td>4.5 LPA</td><td>9</td></tr>
-          <tr><td>Capgemini</td><td>4.25 LPA</td><td>12</td></tr>
-          <tr><td>DXC</td><td>4.20 LPA</td><td>7</td></tr>
-          <tr><td>Novatech Software Pvt. Ltd.</td><td>3–6 LPA</td><td>3</td></tr>
-          <tr><td>Wipro</td><td>3.5 LPA</td><td>10</td></tr>
-          <tr><td>Infosys</td><td>3.6 LPA</td><td>11</td></tr>
-          <tr><td>TCS</td><td>3.36 LPA</td><td>15</td></tr>
-          <tr><td>NEEYAMO</td><td>3 LPA</td><td>4</td></tr>
-          <tr><td>Persistent Systems</td><td>5.01 LPA</td><td>8</td></tr>
-          <tr><td>KPIT-Vehicle Engineering and Design</td><td>4.5 LPA</td><td>6</td></tr>
+          <tr><td>1</td><td>Palo Alto Networks</td><td>54.75 LPA</td><td>3</td></tr>
+          <tr><td>2</td><td>Intuit India Product Development Center Pvt. Ltd.</td><td>39.25 LPA</td><td>2</td></tr>
+          <tr><td>3</td><td>Paypal</td><td>34.40 LPA</td><td>4</td></tr>
+          <tr><td>4</td><td>PhonePe Pvt Ltd</td><td>33.14 LPA</td><td>5</td></tr>
+          <tr><td>5</td><td>Providence Global Center</td><td>27 LPA</td><td>3</td></tr>
+          <tr><td>6</td><td>Cisco</td><td>24.73 LPA</td><td>6</td></tr>
+          <tr><td>7</td><td>Tesco</td><td>20.77 LPA</td><td>4</td></tr>
+          <tr><td>8</td><td>Deutsche India Private Limited</td><td>19.63 LPA</td><td>3</td></tr>
+          <tr><td>9</td><td>BrowserStack</td><td>19.91 LPA</td><td>2</td></tr>
+          <tr><td>10</td><td>Nike India Technology</td><td>15.16 LPA</td><td>3</td></tr>
+          <tr><td>11</td><td>GSK</td><td>15 LPA</td><td>2</td></tr>
+          <tr><td>12</td><td>Gartner</td><td>12.19 LPA</td><td>3</td></tr>
+          <tr><td>13</td><td>Blueflame Labs</td><td>12–15 LPA</td><td>4</td></tr>
+          <tr><td>14</td><td>Citi</td><td>12 LPA</td><td>3</td></tr>
+          <tr><td>14</td><td>McKinsey & Co.</td><td>12 LPA</td><td>2</td></tr>
+          <tr><td>15</td><td>Amadeus</td><td>11.77 LPA</td><td>3</td></tr>
+          <tr><td>16</td><td>PepsiCo GBS</td><td>10.77 LPA</td><td>4</td></tr>
+          <tr><td>17</td><td>Caterpillar</td><td>10.7 LPA</td><td>5</td></tr>
+          <tr><td>18</td><td>Publicis Sapient</td><td>10.47 LPA</td><td>3</td></tr>
+          <tr><td>19</td><td>Applied Materials</td><td>9.67 LPA</td><td>4</td></tr>
+          <tr><td>20</td><td>HSBC</td><td>9 LPA</td><td>6</td></tr>
+          <tr><td>21</td><td>Dover India Pvt. Ltd.</td><td>9 LPA</td><td>2</td></tr>
+          <tr><td>22</td><td>Cummins India Limited</td><td>8.15 LPA</td><td>7</td></tr>
+          <tr><td>23</td><td>Principal Global</td><td>8 LPA</td><td>3</td></tr>
+          <tr><td>24</td><td>ConsultAdd</td><td>7–12 LPA</td><td>4</td></tr>
+          <tr><td>25</td><td>Eaton</td><td>7.9 LPA</td><td>3</td></tr>
+          <tr><td>26</td><td>TATA Communication</td><td>7.7 LPA</td><td>5</td></tr>
+          <tr><td>27</td><td>MG Motor</td><td>7 LPA</td><td>2</td></tr>
+          <tr><td>28</td><td>Wirtgen Group – A John Deere Company</td><td>7 LPA</td><td>3</td></tr>
+          <tr><td>29</td><td>TechnipFMC</td><td>6.34 LPA</td><td>2</td></tr>
+          <tr><td>30</td><td>Technip Energies</td><td>6.2 LPA</td><td>3</td></tr>
+          <tr><td>31</td><td>Vertiv</td><td>6 LPA</td><td>2</td></tr>
+          <tr><td>32</td><td>Accolite Digital</td><td>6 LPA</td><td>4</td></tr>
+          <tr><td>33</td><td>Kennametal India Limited</td><td>5.75 LPA</td><td>2</td></tr>
+          <tr><td>34</td><td>Kohler</td><td>5.50 LPA</td><td>3</td></tr>
+          <tr><td>35</td><td>Tech Mahindra</td><td>5.5 LPA</td><td>7</td></tr>
+          <tr><td>36</td><td>Infocepts</td><td>5 LPA</td><td>6</td></tr>
+          <tr><td>37</td><td>Siemens</td><td>5 LPA</td><td>5</td></tr>
+          <tr><td>38</td><td>KonvergeAI</td><td>4.6 LPA</td><td>3</td></tr>
+          <tr><td>38</td><td>KPIT</td><td>4.5 LPA</td><td>8</td></tr>
+          <tr><td>40</td><td>ifm Engineering Pvt. Ltd.</td><td>4.5 LPA</td><td>2</td></tr>
+          <tr><td>41</td><td>HCL Technologies</td><td>4.5 LPA</td><td>9</td></tr>
+          <tr><td>42</td><td>Capgemini</td><td>4.25 LPA</td><td>12</td></tr>
+          <tr><td>43</td><td>DXC</td><td>4.20 LPA</td><td>7</td></tr>
+          <tr><td>44</td><td>Novatech Software Pvt. Ltd.</td><td>3–6 LPA</td><td>3</td></tr>
+          <tr><td>45</td><td>Wipro</td><td>3.5 LPA</td><td>10</td></tr>
+          <tr><td>46</td><td>Infosys</td><td>3.6 LPA</td><td>11</td></tr>
+          <tr><td>47</td><td>TCS</td><td>3.36 LPA</td><td>15</td></tr>
+          <tr><td>48</td><td>NEEYAMO</td><td>3 LPA</td><td>4</td></tr>
+          <tr><td>49</td><td>Persistent Systems</td><td>5.01 LPA</td><td>8</td></tr>
+          <tr><td>50</td><td>KPIT-Vehicle Engineering and Design</td><td>4.5 LPA</td><td>6</td></tr>
         </tbody>
       </table>
     </div>
