--- a/training.html
+++ b/training.html
@@ -11,7 +11,7 @@
   <!-- 🔹 header-->
   <header class="college-header">
     <div class="header-container">
-      <img src="logo1.webp" alt="Cummins Logo" class="college-logo">
+      <img src="cummins-removebg-preview.png" alt="Cummins Logo" class="college-logo">
       <div class="college-text">
         <p class="top-small">Maharshi Karve Stree Shikshan Sanstha’s</p>
         <h1 class="college-name">CUMMINS COLLEGE OF ENGINEERING FOR WOMEN, NAGPUR</h1>
