Updated images in statistic pages

--- a/statistics.html
+++ b/statistics.html
@@ -54,16 +54,19 @@
     </ul>
   </nav>
 
+  
   <!-- 🔹 Carousel -->
-  <section class="carousel">
-    <div class="slides">
-      <img src="img1.jpg" alt="Placement 1">
-      <img src="img2.jpg" alt="Placement 2">
-      <img src="img3.jpg" alt="Placement 3">
-      <img src="img4.jpg" alt="Placement 4">
-      <img src="img5.jpg" alt="Placement 5">
-    </div>
-  </section>
+<section class="carousel">
+  <div class="slides">
+    <img src="p1.jpg" alt="Placement 1">
+    <img src="p2.jpg" alt="Placement 2">
+    <img src="p3.jpg" alt="Placement 3">
+    
+  </div>
+  <a class="prev" onclick="plusSlides(-1)">❮</a>
+  <a class="next" onclick="plusSlides(1)">❯</a>
+</section>
+
 
   <!-- 🔹 Academic Year Table -->
   <section class="table-section">
