added new files

--- a/training.html
+++ b/training.html
@@ -6,7 +6,8 @@
   <title>Training & Placement | Cummins College</title>
   <link rel="stylesheet" href="training.css">
 </head>
-<body>
+<body class="training-page">
+
 
   <!-- 🔹 header-->
   <header class="college-header">
