new file updated

--- a/companies.html
+++ b/companies.html
@@ -35,7 +35,7 @@
     <a >Facilities</a>
     <a >Academics</a>
     <a href="training.html">Placement & Training</a>
-    <a >Alumni</a>
+    <a href="higherstudies.html">Higher Studies</a>
   </div>
   <span class="openbtn" onclick="openSidebar()">☰ Menu</span>
 
