--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <a href="companies.html">Facilites</a>
     <a href="training.html">Academics</a>
     <a href="training.html">Placement & training</a>
-    <a href="training.html">Alumini</a>
+    <a href="higherstudies.html">Higher Studies</a>
     
   </div>
   <span class="openbtn" onclick="openSidebar()">☰ Menu</span>
