--- a/statistics.html
+++ b/statistics.html
@@ -37,7 +37,7 @@
     <a >Facilites</a>
     <a >Academics</a>
     <a href="training.html">Placement & training</a>
-    <a >Alumini</a>
+    <a href="higherstudies.html">Higher Studies</a>
     
   </div>
   <span class="openbtn" onclick="openSidebar()">☰ Menu</span>
