changes made in footer and statistic page

--- a/index.html
+++ b/index.html
@@ -225,11 +225,8 @@
 
 
   <!-- 🔹 Footer -->
- <!-- Footer Section -->
 <footer class="footer">
   <div class="footer-container">
-
-    <!-- Important Links -->
     <div class="footer-col">
       <h3>Important Links</h3>
       <ul>
@@ -242,7 +239,6 @@
       </ul>
     </div>
 
-    <!-- Contact -->
     <div class="footer-col">
       <h3>Contact Us</h3>
       <p>📞 +91 9420410225</p>
@@ -252,7 +248,6 @@
       <p>✉️ office@cumminscollege.edu.in</p>
     </div>
 
-    <!-- City Office -->
     <div class="footer-col">
       <h3>City Office</h3>
       <p>Maharshi Karve Stree Shikshan Samstha's</p>
@@ -260,14 +255,33 @@
       <p>Nagpur - 440015</p>
     </div>
 
-    <!-- Address & Social -->
     <div class="footer-col">
       <h3>Institute Address</h3>
-      <p>Mouje Sukli (Gupchup), Hingna, Nagpur - 441110</p>
+      <p>
+        <a href="https://www.google.com/maps/place/Cummins+College+Of+Engineering+For+Women,+Nagpur/@21.1220581,78.9468932,17z/data=!3m1!4b1!4m6!3m5!1s0x3bd4957a9f9a7d8b:0x5d2e5d0b505d1e58!8m2!3d21.1220581!4d78.9468932!16s%2Fg%2F11h8y2sk53?entry=ttu" 
+           target="_blank" class="map-link">
+          Cummins College Of Engineering For Women, Nagpur,<br>
+          3X9H+JPW, Tal, Mouje, Gupchup, Sukali, Hingna,<br>
+          Maharashtra 441110
+        </a>
+      </p>
 
       <h3>Social Connect</h3>
-      <div class=
-    </footer>
+      <div class="social-icons">
+        <p><a href="https://www.facebook.com/CCOEWNAGPUR/" target="_blank">
+          <img src="facebbok.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/ccoewnagpur/?hl=en" target="_blank">
+          <img src="insta.svg" alt="Instagram">
+        </a>
+        <a href="https://www.linkedin.com/school/cummins-college-of-engineering-for-women-mauja/?originalSubdomain=in" target="_blank">
+          <img src="leankdean.jpg" alt="LinkedIn">
+        </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 <!-- Chatbot -->
   <div class="chatbot-container">
