--- a/training.html
+++ b/training.html
@@ -109,70 +109,32 @@
   <section class="coordinators">
   <h2>📌 Student Coordinators</h2>
 
-  <!-- Computer Engineering -->
-  <h3>Computer Engineering</h3>
+  
+  <h3>3rd Year Coordinator</h3>
   <table>
     <tr>
-      <th>Year</th>
+      <th>Branch</th>
       <th>Student Coordinators</th>
     </tr>
     <tr>
-      <td>2nd Year</td>
-      <td>Amit Sharma, Priya Patil</td>
+      <td>Computer Engineering</td>
+      <td>Amit Sharma, Priya Patil,</td>
     </tr>
     <tr>
-      <td>3rd Year</td>
+      <td>Electronics and TeleCommuncation Engineering</td>
       <td>Rahul Mehta, Sneha Joshi</td>
     </tr>
     <tr>
-      <td>4th Year</td>
+      <td>Mechanical Engineering</td>
       <td>Neha Kulkarni, Rohan Gupta</td>
     </tr>
   </table>
 
 
 
-  <!-- Electronics & Telecommunication -->
-  <h3>Electronics & Telecommunication</h3>
-  <table>
-    <tr>
-      <th>Year</th>
-      <th>Student Coordinators</th>
-    </tr>
-    <tr>
-      <td>2nd Year</td>
-      <td>Harshita Singh, Nikhil Patil</td>
-    </tr>
-    <tr>
-      <td>3rd Year</td>
-      <td>Varun Sharma, Sakshi Deshmukh</td>
-    </tr>
-    <tr>
-      <td>4th Year</td>
-      <td>Rutuja Naik, Manav Goyal</td>
-    </tr>
-  </table>
+  
 
-  <!-- Mechanical Engineering -->
-  <h3>Mechanical Engineering</h3>
-  <table>
-    <tr>
-      <th>Year</th>
-      <th>Student Coordinators</th>
-    </tr>
-    <tr>
-      <td>2nd Year</td>
-      <td>Akash Yadav, Snehal Pawar</td>
-    </tr>
-    <tr>
-      <td>3rd Year</td>
-      <td>Rohit Shinde, Anjali Patil</td>
-    </tr>
-    <tr>
-      <td>4th Year</td>
-      <td>Siddharth Kale, Meera Joshi</td>
-    </tr>
-  </table>
+  
 </section>
 
 
@@ -186,11 +148,9 @@
     <p><strong>- Placement Incharge</strong></p>
   </section>
 
-  <!--  Footer -->
+    <!-- 🔹 Footer -->
 <footer class="footer">
   <div class="footer-container">
-
-    <!-- Important Links -->
     <div class="footer-col">
       <h3>Important Links</h3>
       <ul>
@@ -203,7 +163,6 @@
       </ul>
     </div>
 
-    <!-- Contact -->
     <div class="footer-col">
       <h3>Contact Us</h3>
       <p>📞 +91 9420410225</p>
@@ -213,7 +172,6 @@
       <p>✉️ office@cumminscollege.edu.in</p>
     </div>
 
-    <!-- City Office -->
     <div class="footer-col">
       <h3>City Office</h3>
       <p>Maharshi Karve Stree Shikshan Samstha's</p>
@@ -221,14 +179,33 @@
       <p>Nagpur - 440015</p>
     </div>
 
-    <!-- Address & Social -->
     <div class="footer-col">
       <h3>Institute Address</h3>
-      <p>Mouje Sukli (Gupchup), Hingna, Nagpur - 441110</p>
+      <p>
+        <a href="https://www.google.com/maps/place/Cummins+College+Of+Engineering+For+Women,+Nagpur/@21.1220581,78.9468932,17z/data=!3m1!4b1!4m6!3m5!1s0x3bd4957a9f9a7d8b:0x5d2e5d0b505d1e58!8m2!3d21.1220581!4d78.9468932!16s%2Fg%2F11h8y2sk53?entry=ttu" 
+           target="_blank" class="map-link">
+          Cummins College Of Engineering For Women, Nagpur,<br>
+          3X9H+JPW, Tal, Mouje, Gupchup, Sukali, Hingna,<br>
+          Maharashtra 441110
+        </a>
+      </p>
 
       <h3>Social Connect</h3>
-      <div class=
-    </footer>
+      <div class="social-icons">
+        <p><a href="https://www.facebook.com/CCOEWNAGPUR/" target="_blank">
+          <img src="facebbok.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/ccoewnagpur/?hl=en" target="_blank">
+          <img src="insta.svg" alt="Instagram">
+        </a>
+        <a href="https://www.linkedin.com/school/cummins-college-of-engineering-for-women-mauja/?originalSubdomain=in" target="_blank">
+          <img src="leankdean.jpg" alt="LinkedIn">
+        </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 <!-- Chatbot -->
   <div class="chatbot-container">
