changes made in higher studies

--- a/higherstudies.html
+++ b/higherstudies.html
@@ -23,12 +23,17 @@
     </header>
 
 
-    <header>
-        <div class="wrap">
-            <h1>Higher Studies – Alumni (Girls)</h1>
-            <div class="subtitle">Track alumni pursuing MS, MBA, PhD and more across universities worldwide.</div>
-        </div>
-    </header>
+    <header class="hero">
+  <div class="overlay">
+    <div class="wrap">
+      <h1>Higher Studies – Alumni </h1>
+      <blockquote class="quote">
+        “Empowering girls with higher education is the key to building stronger communities and brighter futures.” |
+      </blockquote>
+    </div>
+  </div>
+</header>
+
 
     <!-- 🔹 Sidebar -->
   <div id="sidebar" class="sidebar">
@@ -102,9 +107,7 @@
         <div class="modal-body" id="mBody"></div>
     </dialog>
 
-    <footer>
-        © <span id="yr"></span> College Higher Studies Cell · Built for institutional portals
-    </footer>
+   © <span id="yr"></span> Cummins College of Engineering, Nagpur
 
     <script src="higherstudies.js"></script>
 </body>
