--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
   <title>Student Portal — Registration Form</title>
   <style>
     :root{
-      --bg: #1e3a8a;           /* royal blue */
+      --bg: linear-gradient(135deg, #3498db, #2980b9);           /* royal blue */
       --bg-gradient: linear-gradient(135deg, #1e40af 0%, #1e3a8a 50%, #1d4ed8 100%);
       --panel: #ffffff;        /* white */
       --muted: #6b7280;        /* gray-500 */
