--- a/placement-flow.html
+++ b/placement-flow.html
@@ -393,60 +393,34 @@
             </div>
         </section>
 
-        <!-- Important Guidelines -->
-        <section class="mb-16">
-            <div class="bg-gradient-to-r from-blue-600 to-purple-600 rounded-2xl shadow-xl p-8 text-white">
-                <h2 class="text-3xl font-bold text-center mb-8">Important Guidelines</h2>
-                <div class="grid md:grid-cols-2 gap-8">
-                    <div>
-                        <h3 class="text-xl font-semibold mb-4">📋 Eligibility Criteria</h3>
-                        <ul class="space-y-2 text-blue-100">
-                            <li>• Minimum 60% aggregate in current degree</li>
-                            <li>• No active backlogs during placement</li>
-                            <li>• Regular attendance in training sessions</li>
-                            <li>• Completed all academic requirements</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3 class="text-xl font-semibold mb-4">⚠️ Important Rules</h3>
-                        <ul class="space-y-2 text-blue-100">
-                            <li>• One offer acceptance policy</li>
-                            <li>• Professional dress code mandatory</li>
-                            <li>• Punctuality is strictly enforced</li>
-                            <li>• Mobile phones not allowed in interviews</li>
-                        </ul>
-                    </div>
-                </div>
+       <section class="mb-16">
+    <div class="rounded-xl shadow-lg p-8" 
+         style="background: linear-gradient(135deg, #dbeafe, #ffffff); color: black;">
+        <h2 class="text-3xl font-bold text-center mb-8">Important Guidelines</h2>
+        <div class="grid md:grid-cols-2 gap-8">
+            <div>
+                <h3 class="text-xl font-semibold mb-4">📋 Eligibility Criteria</h3>
+                <ul class="space-y-2">
+                    <li>• Minimum 60% aggregate in current degree</li>
+                    <li>• No active backlogs during placement</li>
+                    <li>• Regular attendance in training sessions</li>
+                    <li>• Completed all academic requirements</li>
+                </ul>
             </div>
-        </section>
+            <div>
+                <h3 class="text-xl font-semibold mb-4">⚠️ Important Rules</h3>
+                <ul class="space-y-2">
+                    <li>• One offer acceptance policy</li>
+                    <li>• Professional dress code mandatory</li>
+                    <li>• Punctuality is strictly enforced</li>
+                    <li>• Mobile phones not allowed in interviews</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 
-        <!-- Contact Section -->
-        <section class="text-center">
-            <div class="bg-white rounded-2xl shadow-xl p-8 border border-gray-100">
-                <h2 class="text-3xl font-bold text-gray-900 mb-4">Need Help?</h2>
-                <p class="text-lg text-gray-600 mb-8">
-                    Our placement team is here to support you throughout your journey
-                </p>
-                <div class="grid md:grid-cols-3 gap-6">
-                    <div class="p-6 bg-blue-50 rounded-xl">
-                        <div class="text-3xl mb-3">📧</div>
-                        <h3 class="font-semibold text-gray-900 mb-2">Email Support</h3>
-                        <p class="text-gray-600">placement@college.edu</p>
-                    </div>
-                    <div class="p-6 bg-green-50 rounded-xl">
-                        <div class="text-3xl mb-3">📞</div>
-                        <h3 class="font-semibold text-gray-900 mb-2">Phone Support</h3>
-                        <p class="text-gray-600">+91 98765 43210</p>
-                    </div>
-                    <div class="p-6 bg-purple-50 rounded-xl">
-                        <div class="text-3xl mb-3">🏢</div>
-                        <h3 class="font-semibold text-gray-900 mb-2">Office Hours</h3>
-                        <p class="text-gray-600">Mon-Fri: 9 AM - 5 PM</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+        
 
     <!-- 🔹 Footer -->
 <footer class="footer">
